# openencrypt-android

./: .envrc.example  .gitignore  AGENTS.md  README.md  settings.gradle.kts
.github/workflows/: acceptance.yml  ci.yml  release.yml
app-android/: README.md  build.gradle.kts  proguard-rules.pro
app-android/src/main/: AndroidManifest.xml
core-encrypt-rs/: Cargo.toml  README.md
core-encrypt-rs/src/: config.rs  db.rs  main.rs
core-openlist-go/: README.md  go.mod
core-openlist-go/cmd/openlist-runtime/: main.go
core-openlist-go/internal/backoff/: backoff.go  backoff_test.go
core-openlist-go/internal/config/: config.go
core-openlist-go/internal/crypto/: content.go  content_test.go  decrypt.go  decrypt_test.go
core-openlist-go/internal/cryptocache/: cache.go
docs/: 00_overview.md  01_architecture.md  02_repo_layout.md  03_roadmap.md  04_android_ui_ia.md  05_android_ui_fields.md  06_service_lifecycle.md  07_webdav_parallel_timeout.md  08_rust_sqlite_migration.md  09_update_release_design.md  10_ci_cd_github_actions.md  11_test_acceptance.md  12_signing_and_env_setup.md  CHANGELOG_PLAN.md  DECISIONS.md  IMPLEMENTATION_GAP_MATRIX.md  SESSION_STATE.md
schemas/: README.md  config.example.json  config.schema.json
tools/: acceptance-check.sh  bootstrap-check.sh  build-android-runtime-bins.sh  check-android-runtime-bins.sh  check-apk-runtime-assets.sh  ci-watch.sh  next-version.sh  phase-check.sh  playback-webdav-matrix-check.sh  publish-github.sh  runtime-e2e-check.sh  runtime-soak-check.sh  schema-check.py  soak-check.sh  soak-report.sh  version-base.env
(+63 files in other folders)
